syntax = "proto3";
package proto;
import "google/protobuf/timestamp.proto"; //maybe we will work with timestamps instead of strings

service FoodManagementService {
  rpc addFoodBag (FoodBagRequest) returns (FoodBagResponse);
}
service CollectService
{
  rpc getFoodBags (EmptyMessage) returns (FoodBagList);
  rpc getFoodBagsBetween(PriceIntervalRequest) returns (FoodBagList);
}

message FoodBagRequest {
  string address = 1;
  string type = 2;
  string pickupTime1 = 3;
  string pickupTime2 = 4;
  string pickUpDate = 5;
  int32 price=6;
}
message FoodBagResponse {
  string id = 1;
  string address = 2;
  string type = 3;
  string pickupTime1 = 4;
  string pickupTime2 = 5;
  string pickUpDate = 6;
  int32 price=7;
  string collector = 8;
}

message FoodBagList {
  repeated FoodBagResponse foodBags = 1;
}

message PriceIntervalRequest{
  int32 price1=1;
  int32 price2=2;
}

message EmptyMessage{

}
